tests/fail/vardecl_type_mismatch/test.yp
fn main() {
    i32 x = "hello";
}
